# Weather-App

./: .gitignore  README.md  pyproject.toml
src/api/: main.py  weather_api.py
src/api-requests/: main.py  weather_api_request.py
src/api_requests/: __main__.py  weather_api_request.py
src/data/: response.json
src/gui/: icon_selector.py  main_window.py
